[package]
name = "rust50"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "CS50 Library For Rust"
homepage = "https://github.com/zedgamer9128/rust50.git"
repository = "https://github.com/zedgamer9128/rust50.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
